<resources>
    <string name="app_name">课程表</string>
    <string name="pref_app_version">Ver 0.211</string>
    <string name="title_tools">工具与插件</string>
    <string name="title_timetable">课程表</string>
    <string name="title_settings">设置</string>
    <string name="pref_autoupdate">有更新时提醒我</string>
    <string name="add_course_from_net">从教务系统添加课程</string>
    <string name="add_course_manually">手动添加课程</string>
    <string name="sync_course_from_net">从教务系统更新课表</string>
    <string name="pref_general">常规</string>
    <string name="pref_hide_weekends">隐藏周六周日</string>
    <string name="pref_hide_weekends_summary">即使有课，课表中也不显示周六周日</string>
    <string name="pref_update_now">立即检查更新</string>
    <string name="prev_week">上一周</string>
    <string name="next_week">下一周</string>
    <string name="monday"><b>周一</b></string>
    <string name="tuesday"><b>周二</b></string>
    <string name="wednesday"><b>周三</b></string>
    <string name="thursday"><b>周四</b></string>
    <string name="friday"><b>周五</b></string>
    <string name="saturday"><b>周六</b></string>
    <string name="sunday"><b>周日</b></string>
    <string-array name="weekday_selection_array">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
    <string name="week_selection_btn">第%1$d周</string>
    <string name="class_in_week">共有%1$d节课</string>
    <string name="week_selection_title">选择周数</string>
    <string name="current_week">当前周</string>
    <string name="not_current_week">非本周</string>
    <string name="already_back_to_current_week">已回到当前周</string>
    <string name="pref_appearence">外观</string>
    <string name="pref_show_grid">显示网格</string>
    <string name="pref_show_grid_summary">在课程表中显示网格</string>
    <string name="pref_solid_grid">固定单元格大小</string>
    <string name="pref_solid_grid_summary">固定格子大小，无法显示的字符用省略号代替</string>
    <string name="course_manage">课程管理</string>
    <string name="account_manage">账号管理</string>
    <string name="school_selection">选择学校</string>
    <string name="account_settings">账号密码设置</string>
    <string name="import_shedule">导入课程</string>
    <string name="input_account">账号设置</string>
    <string name="user_name">用户名/学号</string>
    <string name="password">密码</string>
    <string name="input_captcha">输入右图验证码</string>
    <string name="loading_captcha">正在加载验证码...</string>
    <string name="load_captcha_failed_click_to_reload">验证码加载失败，点击图片重新加载</string>
    <string name="click_image_to_reload_captcha">点击图片来更换验证码</string>
    <string name="invalid_captcha">验证码错误</string>
    <string name="invalid_account">账号不存在或密码错误</string>
    <string name="logging_to_jwc">登陆中...</string>
    <string name="importing">导入中...</string>
    <string name="network_connection_failed">网络连接失败</string>
    <string name="downloading_shedule">下载课程表中</string>
    <string name="client_start_progress">准备客户端中</string>
    <string name="first_sem">上学期</string>
    <string name="second_sem">下学期</string>
    <string name="delete_all_classes">删除所有课程</string>
    <string name="all_classes_deleted">已删除所有课程</string>
    <string name="title_activity_class_info">ClassInfoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="class_details">课程信息</string>
    <string name="class_name">课程名称:</string>
    <string name="class_teacher">任课教师:</string>
    <string name="ok">好的</string>
    <string name="no_class_imported">没有导入任何课程！请检查教务处状态，填写的学号与学期，并稍后再试。</string>
    <string name="class_imported">成功导入了%1$d门课程！</string>
    <string name="class_weeks">上课周数:</string>
    <string name="week_placeholder">第%1$s周</string>
    <string name="hidden_functions">不存在的功能</string>
    <string name="see_others_timetable">偷看别人课表</string>
    <string name="background_color_has_changed">课程背景色已更改</string>
    <string name="pick_class_background_color">挑选课程背景色</string>
    <string name="class_place">上课地点:</string>
    <string name="month_placeholder">%1$d\n月</string>
    <string name="day_placeholder">%1$d日</string>
    <string name="set_current_week">设置当前周</string>
    <string name="confirm_set_current_week_with_placeholder">确定把第%1$d周设置为当前周吗?</string>
    <string name="cancel">取消</string>
    <string name="current_week_has_been_set">当前周已设置成功</string>
    <string name="pref_about">关于</string>
    <string name="pref_appname_about">武科大专用课程表</string>
    <string name="pref_app_on_github">在Github上查看</string>
    <string name="pref_github_link">https://github.com/LakeYang/WUST-Class-Schedule-App/</string>
    <string name="about_app_long_text">武科大专用课程表\n\nCopyright© 2018 by LakeYang <a href="mailto:hmnotehuyang@gmail.com">hmnotehuyang@gmail.com</a>\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.</string>
    <string name="action_save_account">保存账号设置</string>
    <string name="prompt_username">用户名/学号</string>
    <string name="prompt_password">密码</string>
    <string name="account_setting_hint">在这里填写的账号密码将会在本应用任何需要教务系统账号密码的位置自动填入</string>
    <string name="AddNewClass">添加新课程</string>
    <string name="course_name">课程名称</string>
    <string name="teacher_name">任课教师</string>
    <string name="clock_suffix">节</string>
    <string name="begin">开始</string>
    <string name="end">结束</string>
    <string name="clock_mid_line">-</string>
    <string name="weeks_of_class">上课周数</string>
    <string name="place_to_have_class">上课地点</string>
    <string name="save">保存</string>
    <string name="please_input_coursename">请输入课程名称</string>
    <string name="unset">未设置</string>
    <string name="startclock_greater_than_end">开始节数大于结束节数</string>
    <string name="startclock_cannot_zero">节数不能为0，从1开始</string>
    <string name="endclock_exceed">结束节数不能大于12</string>
    <string name="please_input_clock">请输入节数</string>
    <string name="at_least_one_week_selected">至少有一周要上课</string>
    <string name="class_too_long">上课时间太长</string>
    <string name="add_class_manual_success">添加课程成功！</string>
    <string name="pref_show_class_in_other_weeks">显示非本周课程</string>
    <string name="pref_show_class_in_other_weeks_summary">非本周的课程将以灰色显示在课表中</string>
    <string name="confirm_delete_all_classes">确认删除所有课程吗？该操作不可撤销</string>
    <string name="save_changes">保存修改</string>
    <string name="save_as_new_class">另存为新课程</string>
    <string name="school_system_not_operational_with_code">教务处炸了，HTTP错误码%1$d</string>
    <string name="edit_class">编辑课程</string>
    <string name="delete_this_class">删除该课程</string>
    <string name="delete_this_classes">删除该课程</string>
    <string name="confirm_delete_this_classes">确定删除该课程吗？所以同名课程都将被删除(该功能暂不可用)</string>
    <string name="this_class_deleted">已删除课程 [%1$s]</string>
    <string name="update_time">2018.10.31</string>
    <string name="tv_author">作者</string>
    <string name="author">LakeYang</string>
    <string name="email">hmnotehuyang@gmail.com</string>
    <string name="statement">声明：</string>
    <string name="statementContent">  This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.</string>
    <string name="copyright">Copyright© 2018</string>
</resources>
