<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context="com.hihuyang.kb.timetable.AboutAppActivity">

    <RelativeLayout
        android:id="@+id/rl_app_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/myrect"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:elevation="2dp">

        <ImageView
            android:id="@+id/iv_appIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"
            android:adjustViewBounds="true"
            android:maxHeight="50dp"
            android:maxWidth="50dp"/>

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/app_name"
            android:layout_toRightOf="@+id/iv_appIcon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_app_name"
            android:paddingLeft="10dp"
            android:layout_toRightOf="@+id/iv_appIcon"
            android:text="@string/update_time"
            android:textSize="12sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/tv_author"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/rl_author_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:background="@drawable/myrect"
        android:elevation="2dp"
        android:layout_below="@id/rl_app_info">

        <ImageView
            android:id="@+id/iv_author_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_developer"
            android:adjustViewBounds="true"
            android:maxHeight="25dp"
            android:maxWidth="25dp"/>

        <TextView
            android:id="@+id/tv_author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toRightOf="@+id/iv_author_icon"
            android:text="@string/author" />

        <ImageView
            android:id="@+id/iv_github_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_github"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            android:maxHeight="25dp"
            android:maxWidth="25dp"
            android:layout_below="@id/iv_author_icon"/>

        <TextView
            android:id="@+id/tv_github_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_author_name"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="10dp"
            android:layout_toRightOf="@+id/iv_github_icon"
            android:autoLink="web"
            android:text="@string/pref_github_link" />

        <ImageView
            android:id="@+id/iv_email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_email"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            android:maxHeight="25dp"
            android:maxWidth="25dp"
            android:layout_below="@id/iv_github_icon"/>

        <TextView
            android:id="@+id/tv_email_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_github_link"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_toRightOf="@+id/iv_author_icon"
            android:autoLink="email"
            android:text="@string/email" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/statementContent"
        android:autoLink="all"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/copyright" />
</LinearLayout>